--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'com.blankj:utilcode:1.23.4'
+    implementation 'com.android.support:cardview-v7:28.0.0'
 }
