--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'com.blankj:utilcode:1.23.4'
     implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.github.lzyzsd:circleprogress:1.2.1'
 }
