--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     implementation 'com.blankj:utilcode:1.23.4'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.github.lzyzsd:circleprogress:1.2.1'
+    implementation 'com.android.support:design:28.0.0'
 }
