--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.github.lzyzsd:circleprogress:1.2.1'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'me.yuqirong:cardswipelayout:1.0.0'
 }
