add LifeCycle callbacks
Change-Id: If0141e417f66595bb5f9b6804e270cbfab05bb8d

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="com.example.ganks.GlobalConfiguration"
+            android:value="ConfigModule" />
     </application>
+
+
 
 </manifest>
