--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,6 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.github.lzyzsd:circleprogress:1.2.1'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
     implementation project(path: ':tantancardswipe')
 }
