--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'//支持gson解析数据
+    implementation 'com.squareup.retrofit2:converter-scalars:2.4.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.3'
@@ -37,5 +38,8 @@ dependencies {
     implementation 'com.github.lzyzsd:circleprogress:1.2.1'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation 'com.wang.avi:library:2.1.3'
+    implementation 'com.squareup.okio:okio:1.14.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation project(path: ':tantancardswipe')
 }
