添加全局配置文件

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             </intent-filter>
         </activity>
         <meta-data
-            android:name="com.example.ganks.config.GlobalConfiguration"
+            android:name="com.example.ganks.global.GlobalConfiguration"
             android:value="ConfigModule" />
     </application>
 
