--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,14 +19,15 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'//支持gson解析数据
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    //支持gson解析数据
     implementation 'com.squareup.retrofit2:converter-scalars:2.4.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
@@ -42,4 +43,5 @@ dependencies {
     implementation 'com.squareup.okio:okio:1.14.1'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation project(path: ':tantancardswipe')
+    implementation project(':autosize')
 }
