--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,12 @@
         <meta-data
             android:name="com.example.ganks.global.GlobalConfiguration"
             android:value="ConfigModule" />
+        <meta-data
+            android:name="design_width_in_dp"
+            android:value="360" />
+        <meta-data
+            android:name="design_height_in_dp"
+            android:value="640" />
     </application>
-
-
 
 </manifest>
