--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ allprojects {
         google()
         jcenter()
         maven { url "https://jitpack.io" }
-        
+        mavenCentral()
     }
 }
 
