prepare for banner
Change-Id: Iebcd93f72fbbc9fa748fc5623c9d5c8573c9bb2f

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     implementation('com.github.hotchemi:permissionsdispatcher:3.2.0') {
         exclude module: 'support-v13'
     }
+    //Banner依赖
+    implementation 'com.bigkoo:convenientbanner:2.0.5'
     implementation project(path: ':tantancardswipe')
     implementation project(':autosize')
 }
