--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,5 +57,7 @@ dependencies {
     //Banner依赖
     implementation 'com.bigkoo:convenientbanner:2.0.5'
     implementation project(path: ':tantancardswipe')
+    // EventBus
+    implementation 'org.greenrobot:eventbus:3.0.0'
     implementation project(':autosize')
 }
