--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,39 +25,37 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-    //支持gson解析数据
-    implementation 'com.squareup.retrofit2:converter-scalars:2.4.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.3'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'com.blankj:utilcode:1.23.4'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.github.lzyzsd:circleprogress:1.2.1'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.jakewharton.timber:timber:4.7.1'
     implementation 'com.wang.avi:library:2.1.3'
-    implementation 'com.squareup.okio:okio:1.14.1'
-    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
-    //Json
-    implementation 'com.alibaba:fastjson:1.1.68.android'
     //Fragment
     implementation 'me.yokeyword:fragmentation:1.3.6'
     implementation 'me.yokeyword:fragmentation-swipeback:1.3.6'
     //ButterKnife依赖
     implementation 'com.jakewharton:butterknife:9.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0'
-    //权限
-    implementation('com.github.hotchemi:permissionsdispatcher:3.2.0') {
-        exclude module: 'support-v13'
-    }
+
     //Banner依赖
     implementation 'com.bigkoo:convenientbanner:2.0.5'
     implementation project(path: ':tantancardswipe')
+
+    // retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+
+    //rxjava
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.3'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+
     // EventBus
     implementation 'org.greenrobot:eventbus:3.0.0'
+
     implementation project(':autosize')
+    implementation project(':gank_core')
 }
