--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.1'
+
+        //greendDao
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2' // add plugin
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
