--- a/gank_core/build.gradle
+++ b/gank_core/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'org.greenrobot.greendao' // apply plugin
 
 android {
     compileSdkVersion 28
@@ -21,7 +22,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
+    greendao {
+        schemaVersion 1//数据库版本号
+        daoPackage 'com.example.ganks.greendao'//设置DaoMaster、DaoSession、Dao包名
+        targetGenDir 'src/main/java'//设置DaoMaster、DaoSession、Dao目录
+    }
 }
 
 dependencies {
@@ -58,4 +63,6 @@ dependencies {
     implementation('com.github.hotchemi:permissionsdispatcher:3.2.0') {
         exclude module: 'support-v13'
     }
+
+    implementation 'org.greenrobot:greendao:3.2.2' // greenDao
 }
