--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,11 +32,11 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.github.lzyzsd:circleprogress:1.2.1'
     implementation 'com.android.support:design:28.0.0'
-    implementation 'com.jakewharton.timber:timber:4.7.1'
     implementation 'com.wang.avi:library:2.1.3'
     //Fragment
     implementation 'me.yokeyword:fragmentation:1.3.6'
     implementation 'me.yokeyword:fragmentation-swipeback:1.3.6'
+
     //ButterKnife依赖
     implementation 'com.jakewharton:butterknife:9.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0'
@@ -56,6 +56,8 @@ dependencies {
 
     // EventBus
     implementation 'org.greenrobot:eventbus:3.0.0'
+
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
 
     implementation project(':autosize')
     implementation project(':gank_core')
