--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,10 @@ dependencies {
 
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
 
+    implementation 'com.tbruyelle.rxpermissions:rxpermissions:0.7.0@aar'
+
+    implementation 'io.reactivex:rxjava:1.1.9'
+
     implementation project(':autosize')
     implementation project(':gank_core')
 }
