--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".ui.activitys.ContentActivity">
         </activity>
-        <activity android:name=".EnterActivity">
+        <activity android:name=".EnterActivity"
+            android:theme="@style/AppStartLoad">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
