--- a/gank_core/build.gradle
+++ b/gank_core/build.gradle
@@ -5,7 +5,6 @@ android {
     compileSdkVersion 28
 
 
-
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 28
@@ -63,6 +62,13 @@ dependencies {
     implementation('com.github.hotchemi:permissionsdispatcher:3.2.0') {
         exclude module: 'support-v13'
     }
+
+    //沉浸式状态栏
+    implementation 'com.github.niorgai:StatusBarCompat:2.1.4'
+
+    //Google AutoValue
+    compileOnly 'com.google.auto.value:auto-value:1.2'
+    annotationProcessor 'com.google.auto.value:auto-value:1.2'
 
     //RecyclerView依赖
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.40'
