--- a/gank_core/build.gradle
+++ b/gank_core/build.gradle
@@ -29,49 +29,56 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    api fileTree(dir: 'libs', include: ['*.jar'])
+    api 'com.android.support:appcompat-v7:28.0.0'
+    api 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     //Fragment依赖
-    implementation 'me.yokeyword:fragmentation:1.3.3'
+    api 'me.yokeyword:fragmentation:1.3.3'
     // okhttp
-    implementation 'com.squareup.okio:okio:1.14.1'
-    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    api 'com.squareup.okio:okio:1.14.1'
+    api 'com.squareup.okhttp3:okhttp:3.10.0'
     // retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-
+    api 'com.squareup.retrofit2:retrofit:2.4.0'
+    api 'com.squareup.retrofit2:converter-gson:2.4.0'
     //支持gson解析数据
-    implementation 'com.squareup.retrofit2:converter-scalars:2.4.0'
-
+    api 'com.squareup.retrofit2:converter-scalars:2.4.0'
     //rxjava
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.3'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
-
+    api 'io.reactivex.rxjava2:rxjava:2.2.3'
+    api 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    api 'io.reactivex.rxjava2:rxandroid:2.1.0'
     // EventBus
-    implementation 'org.greenrobot:eventbus:3.0.0'
-
+    api 'org.greenrobot:eventbus:3.0.0'
     //Json
-    implementation 'com.alibaba:fastjson:1.1.70.android'
+    api 'com.alibaba:fastjson:1.1.70.android'
 
     //权限
-    implementation('com.github.hotchemi:permissionsdispatcher:3.2.0') {
+    api('com.github.hotchemi:permissionsdispatcher:3.2.0') {
         exclude module: 'support-v13'
     }
-
     //沉浸式状态栏
-    implementation 'com.github.niorgai:StatusBarCompat:2.1.4'
-
+    api 'com.github.niorgai:StatusBarCompat:2.1.4'
     //Google AutoValue
     compileOnly 'com.google.auto.value:auto-value:1.2'
     annotationProcessor 'com.google.auto.value:auto-value:1.2'
-
     //RecyclerView依赖
-    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.40'
-
-    implementation 'org.greenrobot:greendao:3.2.2' // greenDao
+    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.40'
+    api 'org.greenrobot:greendao:3.2.2' // greenDao
+    //ButterKnife依赖
+    api 'com.jakewharton:butterknife:9.0.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0'
+    //Banner依赖
+    api 'com.bigkoo:convenientbanner:2.0.5'
+    api project(path: ':tantancardswipe')
+    api 'com.tbruyelle.rxpermissions:rxpermissions:0.7.0@aar'
+    api 'io.reactivex:rxjava:1.1.9'
+    api 'com.squareup.picasso:picasso:2.5.2'
+    api 'com.android.support:recyclerview-v7:28.0.0'
+    api 'com.blankj:utilcode:1.23.4'
+    api 'com.android.support:cardview-v7:28.0.0'
+    api 'com.github.lzyzsd:circleprogress:1.2.1'
+    api 'com.android.support:design:28.0.0'
+    api 'com.wang.avi:library:2.1.3'
 }
