添加：Skeleton骨架屏 在等待加载内容的位置提供一个占位图形组合

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,8 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(':autosize')
     implementation project(':gank_core')
+
+    // Skeleton
+    implementation 'com.ethanhua:skeleton:1.1.2'
+    implementation 'io.supercharge:shimmerlayout:2.1.0'
 }
