--- a/gank_core/build.gradle
+++ b/gank_core/build.gradle
@@ -73,4 +73,8 @@ dependencies {
     api 'com.github.lzyzsd:circleprogress:1.2.1'
     api 'com.android.support:design:28.0.0'
     api 'com.wang.avi:library:2.1.3'
+    // rxlifecycle2
+    api 'com.trello.rxlifecycle2:rxlifecycle:2.2.1'
+    api 'com.trello.rxlifecycle2:rxlifecycle-android:2.2.1'
+    api 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.1'
 }
