--- a/imageloader/build.gradle
+++ b/imageloader/build.gradle
@@ -1,18 +1,15 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 28
-
-
+    compileSdkVersion rootProject.ext.android.compileSdkVersion
+    buildToolsVersion rootProject .ext.android.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion 28
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
+        minSdkVersion rootProject.ext.android.minSdkVersion
+        targetSdkVersion rootProject.ext.android.targetSdkVersion
+        versionCode rootProject.ext.android.versionCode
+        versionName rootProject.ext.android.versionName
+        testInstrumentationRunner rootProject.ext.dependencies.AndroidJUnitRunner
     }
 
     buildTypes {
@@ -27,14 +24,14 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    api 'com.github.bumptech.glide:glide:4.8.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
-    implementation 'jp.wasabeef:glide-transformations:4.0.0'
-    implementation 'jp.co.cyberagent.android:gpuimage:2.0.0'
+    implementation rootProject.ext.dependencies.appcompatV7
+    testImplementation rootProject.ext.dependencies.junit
+    androidTestImplementation rootProject.ext.dependencies.testrunner
+    androidTestImplementation rootProject.ext.dependencies.espresso
+    api rootProject.ext.dependencies.glide
+    annotationProcessor rootProject.ext.dependencies.glideCompiler
+    implementation rootProject.ext.dependencies.glideTransformations
+    implementation rootProject.ext.dependencies.gpuimage
     // Glide HTTP组件替换
-    implementation 'com.github.bumptech.glide:okhttp3-integration:4.5.0'
+    implementation rootProject.ext.dependencies.glideOkhttp3Integration
 }
