--- a/config.gradle
+++ b/config.gradle
@@ -1,5 +1,5 @@
 ext {
-    
+
     android = [
             applicationId : "com.example.ganks",
             compileSdkVersion: 28,
@@ -95,8 +95,10 @@ ext {
             utilcode             : 'com.blankj:utilcode:1.23.4',
             
            //---------------avi-----------------------
-            avi                 : 'com.wang.avi:library:2.1.3'
+            avi                 : 'com.wang.avi:library:2.1.3',
 
+            // -------------------arrow---------------
+            arrow              :'com.fernandocejas:arrow:1.0.0'
     ]
 }
 
