--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,28 @@
 language: android
 android:
   components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
-    # - platform-tools
-    # - tools
-    # The BuildTools version used by your project
-    - build-tools-28.0.3
-    # The SDK version used to compile your project
-    - android-28
-    # Additional components
-    - extra-google-google_play_services
-    - extra-google-m2repository
-    - extra-android-m2repository
-    - addon-google_apis-google-28
-    # Specify at least one system image,
-    # if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-android-28
+  - tools
+  - build-tools-28.0.3
+  - android-28
+  - extra-android-m2repository
+  - extra-android-support
+  - sys-img-armeabi-v7a-android-28
+
+  licenses:
+  - 'android-sdk-license.*'
+
+
+# Emulator Management: Create, Start and Wait
+before_script:
+- chmod +x gradlew
+- echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+- emulator -avd test -no-audio -no-window &
+- android-wait-for-emulator
+- adb shell input keyevent 82 &
+
+before_cache:
+- rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+cache:
+  directories:
+  - $HOME/.gradle/caches/
+  - $HOME/.gradle/wrapper/
