--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,8 @@ cache:
   directories:
   - $HOME/.gradle/caches/
   - $HOME/.gradle/wrapper/
+
+    # Specify at least one system image,
+    # if you need to run emulator(s) during your tests
+  - sys-img-armeabi-v7a-android-28
+  - sys-img-x86-android-17
