--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,24 @@
 language: android
 android:
   components:
-  - tools
+  # Uncomment the lines below if you want to
+  # use the latest revision of Android SDK Tools
+  # - platform-tools
+  # - tools
+
+  # The BuildTools version used by your project
   - build-tools-28.0.3
+
+  # The SDK version used to compile your project
   - android-28
+
+  # Additional components
+  - extra-google-google_play_services
+  - extra-google-m2repository
   - extra-android-m2repository
-  - extra-android-support
-  - sys-img-armeabi-v7a-android-28
+  - addon-google_apis-google-28
 
-  licenses:
-  - 'android-sdk-license.*'
-
-before_cache:
-- rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
-cache:
-  directories:
-  - $HOME/.gradle/caches/
-  - $HOME/.gradle/wrapper/
-
-    # Specify at least one system image,
-    # if you need to run emulator(s) during your tests
+  # Specify at least one system image,
+  # if you need to run emulator(s) during your tests
   - sys-img-armeabi-v7a-android-28
   - sys-img-x86-android-17
