--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,19 @@
 language: android
+
 android:
-components:
-# Uncomment the lines below if you want to
-# use the latest revision of Android SDK Tools
-# - platform-tools
-# - tools
+  components:
+    - tools
+    - platform-tools
+    - tools
+    - build-tools-28.0.3
+    - android-26
+    - extra-google-m2repository
+    - extra-android-m2repository
 
-# The BuildTools version used by your project
-- build-tools-28.0.3
+licenses:
+    - 'android-sdk-preview-license-.+'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
 
-# The SDK version used to compile your project
-- android-26
-
-
-# Specify at least one system image,
-# if you need to run emulator(s) during your tests
-- sys-img-armeabi-v7a-android-22
-- sys-img-armeabi-v7a-android-17
-
-before_install:
-- chmod +x gradlew
+script:
+  ./gradlew build
