--- a/data/build.gradle
+++ b/data/build.gradle
@@ -6,8 +6,8 @@ android {
 
 
     defaultConfig {
-        minSdkVersion 28
-        targetSdkVersion 28
+        minSdkVersion 26
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
 
@@ -34,4 +34,6 @@ dependencies {
     implementation project(':gank_core')
     implementation project(':domain')
     implementation rootProject.ext.dependencies.greendao
+    annotationProcessor rootProject.ext.dependencies.daggerCompiler
+    implementation rootProject.ext.dependencies.dagger
 }
