--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -4,4 +4,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies.rxJava
     implementation rootProject.ext.dependencies.arrow
+    annotationProcessor rootProject.ext.dependencies.daggerCompiler
+    implementation rootProject.ext.dependencies.dagger
 }
