--- a/tantancardswipe/build.gradle
+++ b/tantancardswipe/build.gradle
@@ -22,12 +22,11 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation rootProject.ext.dependencies.appcompatV7
     testImplementation rootProject.ext.dependencies.junit
     androidTestImplementation rootProject.ext.dependencies.testrunner
     androidTestImplementation rootProject.ext.dependencies.espresso
     implementation rootProject.ext.dependencies.recyclerview
-
+    implementation project(':domain')
 }
