--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ android:
     - android-26
     - extra-google-m2repository
     - extra-android-m2repository
-
-script:
-  ./gradlew build
+    
+licenses:
+- 'android-sdk-preview-license-.+'
+- 'android-sdk-license-.+'
+- 'google-gdk-license-.+'
