--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,17 @@
 language: android
-
 android:
   components:
-    - tools
-    - platform-tools
-    - tools
-    - build-tools-28.0.3
-    - android-26
-    - extra-google-m2repository
-    - extra-android-m2repository
-    
-licenses:
-- 'android-sdk-preview-license-.+'
-- 'android-sdk-license-.+'
-- 'google-gdk-license-.+'
+  - tools
+  - platform-tools
+  - tools
+  - build-tools-28.0.3
+  - android-26
+  - extra-google-google_play_services
+  - extra-google-m2repository
+  - extra-android-m2repository
+  - addon-google_apis-google-28
+
+  licenses:
+  - android-sdk-preview-license-.+
+  - android-sdk-license-.+
+  - google-gdk-license-.+
