--- a/tantancardswipe/build.gradle
+++ b/tantancardswipe/build.gradle
@@ -18,7 +18,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
