--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,8 @@ android:
   - android-sdk-preview-license-.+
   - android-sdk-license-.+
   - google-gdk-license-.+
+
+  # Specify at least one system image,
+  # if you need to run emulator(s) during your tests
+  - sys-img-armeabi-v7a-android-28
+  - sys-img-x86-android-28
