--- a/gank_core/build.gradle
+++ b/gank_core/build.gradle
@@ -71,5 +71,7 @@ dependencies {
     api rootProject.ext.dependencies.BeautyLayoutManager
     //Json
     api rootProject.ext.dependencies.logger
+    // SystemBarTint
+    api rootProject.ext.dependencies.SystemBarTint
     implementation project(':domain')
 }
