--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation rootProject.ext.dependencies.dagger
     implementation rootProject.ext.dependencies.AndroidScreenAdapter
     implementation rootProject.ext.dependencies.EasyImageLoader
+    implementation rootProject.ext.dependencies.blockcanary
     implementation project(path: ':domain')
     implementation project(path: ':data')
     implementation project(':domain')
