--- a/config.gradle
+++ b/config.gradle
@@ -113,7 +113,9 @@ ext {
             // ---------------------BeautyLayoutManager------------------
             BeautyLayoutManager : 'com.github.xianfeng92:BeautyLayoutManager:V0.4',
             // -----------------------systembartint-----------------------
-            SystemBarTint       : 'com.readystatesoftware.systembartint:systembartint:1.0.3'
+            SystemBarTint       : 'com.readystatesoftware.systembartint:systembartint:1.0.3',
+            // -----------------------blockcanary-------------------------
+            blockcanary         :  'com.github.markzhai:blockcanary-android:1.5.0'
     ]
 }
 
