--- a/config.gradle
+++ b/config.gradle
@@ -46,6 +46,8 @@ ext {
             retrofitJson         : 'com.squareup.retrofit2:converter-gson:2.4.0',
             retrofitScalars      : 'com.squareup.retrofit2:converter-scalars:2.4.0',
             retrofitAdapterRxjava:'com.squareup.retrofit2:adapter-rxjava2:2.4.0',
+            loggingInterceptor   : "com.squareup.okhttp3:logging-interceptor:3.9.0",
+            retrofitUrlManager              : "me.jessyan:retrofit-url-manager:1.4.0",
  
             // ------------- 图片加载 -------------
             glide               : 'com.github.bumptech.glide:glide:4.8.0',
@@ -60,6 +62,9 @@ ext {
             rxlifecycleAndroid   : 'com.trello.rxlifecycle2:rxlifecycle-android:2.2.1',
             rxlifecycleComponents: 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.1',
 
+            // ----------------stetho------------------
+            stetho               : "com.facebook.stetho:stetho:1.5.0",
+            stethookhttp3       : "com.facebook.stetho:stetho-okhttp3:1.4.2",
             //----------------Dagger2---------------
 
             dagger               : 'com.google.dagger:dagger-compiler:2.11',
@@ -106,6 +111,7 @@ ext {
             BeautyLayoutManager : 'com.github.xianfeng92:BeautyLayoutManager:V0.4',
             // -----------------------systembartint-----------------------
             SystemBarTint       : 'com.readystatesoftware.systembartint:systembartint:1.0.3',
+            PersistentCookieJar : "com.github.franmontiel:PersistentCookieJar:v1.0.1",
     ]
 }
 
